Updated learning diary.

--- a/index.html
+++ b/index.html
@@ -52,18 +52,19 @@ code > span.ot { color: #007020; }
 <div id="TOC" class="toc">
 <ul>
 <li><a href="#about-the-project">About the project</a></li>
-<li><a href="#insert-chapter-2-title-here">Insert chapter 2 title here</a></li>
+<li><a href="#week-2-regression-and-model-validation">Week 2 – Regression and model validation</a></li>
 </ul>
 </div>
 
 <hr />
 <div id="about-the-project" class="section level1">
 <h1>About the project</h1>
-<p><em>Write a short description about the course and add a link to your github repository here. This is an R markdown (.Rmd) file so you can use R markdown syntax. See the ‘Useful links’ page in the mooc area (chapter 1) for instructions.</em></p>
+<p>IODS (<a href="https://blogs.helsinki.fi/thinkopen/welcome-open-data-science/">Introduction to Open Data Science</a>) is a MOOC offered by University of Helsinki. My goal is to learn new R tips and tricks and to become more organized and productive in data analysis tasks.</p>
+<p>Source of this learning diary is available at my <a href="https://github.com/mjlassila">Github repo</a>.</p>
 <hr />
 </div>
-<div id="insert-chapter-2-title-here" class="section level1">
-<h1>Insert chapter 2 title here</h1>
+<div id="week-2-regression-and-model-validation" class="section level1">
+<h1>Week 2 – Regression and model validation</h1>
 <p><em>Describe the work you have done this week and summarize your learning.</em></p>
 <ul>
 <li>Describe your work and results clearly.</li>
