Include automatic last-updated -timestamp.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@ code > span.ot { color: #007020; }
 <div id="about-the-project" class="section level1">
 <h1>About the project</h1>
 <p>IODS (<a href="https://blogs.helsinki.fi/thinkopen/welcome-open-data-science/">Introduction to Open Data Science</a>) is a MOOC offered by University of Helsinki. My goal is to learn new R tips and tricks and to become more organized and productive in data analysis tasks.</p>
-<p>Source of this learning diary is available at my <a href="https://github.com/mjlassila">Github repo</a>.</p>
+<p>Source of this learning diary is available at my <a href="https://github.com/mjlassila/IODS-project">Github repo</a>.</p>
+<p>Last updated: 31.10.2018</p>
 <hr />
 </div>
 <div id="week-2-regression-and-model-validation" class="section level1">
